<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <include
        layout="@layout/vista_reutilizar_corresponsal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numeroPinConfirmar"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="198dp"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/numeroTarjeta">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fgdfgd"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="270dp"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/ccv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mm"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="180dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="141dp"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/mm">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fgddsfvedgv"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="290dp"
        android:layout_marginStart="291dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/dd">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numeroP"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/nombredelcliente">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>






    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numerorgeP"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="490dp"
        android:hint="@string/valorPagar"
        android:fontFamily="@font/ubuntumedium"
        app:startIconDrawable="@drawable/money">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="420dp"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/cuotas">

        <AutoCompleteTextView
            android:id="@+id/spinner"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:inputType="none">

        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>