<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <include
        layout="@layout/vista_reutilizar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF" />

    <ImageView
        android:id="@+id/optionsAdmin"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="340dp"
        android:layout_marginTop="19dp"
        android:onClick="mostrarMenuCorresponsal"
        app:srcCompat="@drawable/options" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerlistadoClientesAdmin"
        android:layout_width="match_parent"
        android:layout_height="528dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="123dp"
        android:layout_marginBottom="80dp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="252dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="691dp"
        android:hint="@string/nombreCorresponsal"
        android:textColor="#FF5F58"
        android:textColorHint="#FF5F58"
        android:textSize="20dp"
        android:fontFamily="@font/ubuntumedium"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="668dp"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/saldoCorresponsal"
        android:textColor="#FF5F58"
        android:textColorHint="#FF5F58"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/textViewh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="643dp"
        android:hint="@string/cuentaCorresponsal"
        android:textColor="#FF5F58"
        android:textColorHint="#FF5F58"
        android:textSize="13dp"
        android:fontFamily="@font/ubuntumedium"/>


</RelativeLayout>