<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.ConsultarClienteAdmin">


    <include
        layout="@layout/vista_reutilizar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="330dp"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="41dp"
        app:srcCompat="@drawable/vectangle" />


    <TextView
        android:id="@+id/tvConsultaAdmin"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="560dp"
        android:fontFamily="@font/ubuntumedium"
        android:text="@string/consultaSaldo"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="24sp" />


    <Button
        android:id="@+id/btnSalirConsultaSaldo"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="501dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="114dp"
        android:background="@color/colorlayoutinputs"
        android:fontFamily="@font/ubuntumedium"
        android:text="Aceptar"
        android:textSize="18dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="306dp"
        android:layout_height="205dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="250dp"
        android:src="@drawable/fondoconfirmar" />

    <TextView
        android:id="@+id/tvNombreConsultaS"
        android:layout_width="216dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="384dp"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/nombredelcliente"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCedulaConsultaS"
        android:layout_width="216dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="87dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="340dp"
        android:fontFamily="@font/ubuntumedium"
        android:hint="@string/numerodeCedula"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSaldoConsultaS"
        android:layout_width="216dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="293dp"
        android:fontFamily="@font/ubuntumedium"
        android:hint="Saldo del cliente"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />


</RelativeLayout>
